# grade-api

./: .gitignore  Grades schulNetz.json  Grades.db  __init__.py  api.py  app.py  base.html  config.py  db_context.py  docs.html  getDateFromWebsite.txt  home.html  init.py  pyproject.toml  requirements.txt  seedDB.py  test_connection.py  vercel.json
APIendpoints/: api.py
api/: Grades schulNetz.json  Grades.db  app.py  config.py  getDateFromWebsite.js  index.py  init.py  keygen.py
css/: docs.css
data/: Grades.db
static/css/: base.css  styles.css
templates/: base.html  docs.html  home.html  index.html  test.html
