[project]
name = "grade-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "cffi==1.17.1",
    "click==8.1.8",
    "cryptography==44.0.1",
    "dotenv==0.9.9",
    "flask==3.1.0",
    "flask-sitemapper==1.8.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "libsql>=0.1.11",
    "markupsafe==3.0.2",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.1",
    "werkzeug==3.1.3",
]
