[project]
name = "graiapi-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-sitemapper>=1.8.2",
    "libsql>=0.1.11",
    "pyjwt>=2.11.0",
    "requests>=2.32.5",
]
